# cryptoXT

./: .gitignore  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  brainstorm.md
.github/workflows/: ci.yml
OnionXT/: CLAUDE.md  IMPLEMENTATION-PLAN.md  README.md
OnionXT/.github/workflows/: ci.yml
OnionXT/docs/: 00-overview.md  01-threat-model.md  02-socks5-client.md  03-control-port.md  04-onion-rendezvous.md  05-api-reference.md  06-riptide-integration.md  07-tor-lifecycle.md  08-capabilities-required.md  09-open-questions.md
OnionXT/src/: onionxt.livecodescript
cmake/: sodiumxt.exp
docs/: SodiumXT-IMPLEMENTATION-PLAN.md  api-reference.md  building.md  getting-started.md  recipes.md  security.md  torrentxt-integration.md
docs/development/: building.md  implementation-plan.md
examples/: sodium-demo.livecodescript  sodium-tests.livecodescript
riptide/: 00-overview.md  01-threat-model.md  02-identity.md  03-conventions.md  04-rendezvous.md  05-session.md  06-mailbox.md  07-feed.md  08-groups.md  09-objects.md  10-anti-abuse-and-privacy.md  11-capabilities-required.md  12-conformance-vectors.md  13-open-questions.md  CLAUDE.md  IMPLEMENTATION-PLAN.md  README.md  glossary.md
riptide/.github/workflows/: ci.yml
riptide/tests/vectors/: README.md  vectors.c
riptide/tools/: package-extension.py
src/: sodium.lcb  sodium_shim.c  sodium_shim.h
src/code/: MANIFEST.sha256
src/code/universal-mac/: sodiumxt.dylib
tests/: sodium_smoke_test.c
tools/: check-livecodescript.py  package-extension.py
